--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mithril": "^0.2.0"
   },
   "devDependencies": {
+    "babelify": "^6.3.0",
     "nodemon": "^1.3.7"
   },
   "repository": {
