--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "browserify-middleware": "^5.0.2",
     "express": "^4.12.4",
-    "mithril": "^0.2.0"
+    "mithril": "^0.2.0",
+    "orientjs": "^2.0.0"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
