--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "mocha": "^2.3.2",
     "nodemon": "^1.3.7",
-    "supertest": "^1.1.0"
+    "supertest": "^1.1.0",
     "babelify": "^6.3.0",
     "nodemon": "^1.3.7"
   },
