--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "boilerplate",
     "browserify",
     "express",
-    "mithril"
+    "mithril",
+    "orientjs"
   ],
   "bugs": {
     "url": "https://github.com/mindeavor/node-catapult/issues"
