--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^2.10.0",
+    "body-parser": "^1.13.3",
     "browserify-middleware": "^5.0.2",
     "express": "^4.12.4",
     "mithril": "^0.2.0",
     "orientjs": "^2.0.0"
   },
   "devDependencies": {
+    "babelify": "^6.3.0",
+    "chai": "^3.2.0",
     "mocha": "^2.3.2",
     "nodemon": "^1.3.7",
-    "supertest": "^1.1.0",
-    "babelify": "^6.3.0",
-    "nodemon": "^1.3.7"
+    "supertest": "^1.1.0"
   },
   "repository": {
     "type": "git",
