Actaully saved orientJS to package.json

--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "boilerplate",
     "browserify",
     "express",
-    "mithril",
-    "orientjs"
+    "mithril"
   ],
   "bugs": {
     "url": "https://github.com/mindeavor/node-catapult/issues"
