--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "body-parser": "^1.13.3",
     "browserify-middleware": "^7.0.0",
     "express": "^4.12.4",
+    "migrate": "^0.2.2",
     "mithril": "^0.2.0",
-    "orientjs": "^2.0.0",
-    "passport": "^0.3.0"
+    "passport": "^0.3.0",
+    "passport-github": "^1.0.0",
+    "request-promise": "^0.4.3"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
     "chai": "^3.2.0",
     "mocha": "^2.3.2",
     "nodemon": "^1.3.7",
-    "passport-github": "^1.0.0",
     "supertest": "^1.1.0"
   },
   "repository": {
