--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "browserify-middleware": "^7.0.0",
     "express": "^4.12.4",
     "mithril": "^0.2.0",
-    "orientjs": "^2.0.0"
+    "orientjs": "^2.0.0",
+    "passport": "^0.3.0"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
     "chai": "^3.2.0",
     "mocha": "^2.3.2",
     "nodemon": "^1.3.7",
+    "passport-github": "^1.0.0",
     "supertest": "^1.1.0"
   },
   "repository": {
