--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bluebird": "^2.10.0",
     "body-parser": "^1.13.3",
     "browserify-middleware": "^7.0.0",
+    "dotenv": "^1.2.0",
     "express": "^4.12.4",
     "migrate": "^0.2.2",
     "mithril": "^0.2.0",
