--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "mithril": "^0.2.0",
     "passport": "^0.3.0",
     "passport-github": "^1.0.0",
-    "request-promise": "^0.4.3"
+    "request-promise": "^0.4.3",
+    "socket.io": "^1.3.6",
+    "socket.io-client": "^1.3.6"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
