--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.12.4",
     "migrate": "^0.2.2",
     "mithril": "^0.2.0",
+    "node-sass-endpoint": "^0.2.0",
     "passport": "^0.3.0",
     "passport-github": "^1.0.0",
     "request-promise": "^0.4.3",
