--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 node_js:
-  - "0.12"
-  - "0.11"
-  - "0.10"
+  - "4.0"
   - "iojs"
-  - "iojs-v1.0.4"
+
+before_script:
+  - chmod 755 ./.bin/*.sh
+  - sh -c ./.bin/create-travis-db.sh
+
+after_script:
+  - sh -c ./.bin/delete-travis-db.sh
