--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 node_js:
-  - "0.12"
-  - "0.11"
-  - "0.10"
-  - "iojs"
-  - "iojs-v1.0.4"
+  - "4.1.0"
+jdk:
+  - oraclejdk7
+before_install:
+  # install Neo4j locally:
+  - wget dist.neo4j.org/neo4j-community-2.1.6-unix.tar.gz
+  - tar -xzf neo4j-community-2.1.6-unix.tar.gz
+  - sed -i.bak s/dbms.security.auth_enabled=true/dbms.security.auth_enabled=false/g neo4j-community-2.1.6/conf/neo4j-server.properties
+  - neo4j-community-2.1.6/bin/neo4j start
